--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,9 @@
   height: auto;
   /* border: 1px solid white; */
   display: flex;
+
   justify-content: space-between;
+  align-items: center;
   
 }
 .logo{
@@ -252,4 +254,61 @@ padding: 50px;
  }
  .player1 a:hover{
   scale: 1.1;
+ }
+ @media all and (max-width:440px)
+ {
+  .logo{
+    width: 30%;
+    font-size: 14px;
+  }
+  .one{
+    padding: 15px;
+    
+  }
+ .aboutcontainer{
+  height: auto;
+ }
+ .aboutcontainer p:nth-child(2){
+  font-size: 18px;
+  font-weight: 400;
+  font-family:'QuickSand';
+  /* color: white;
+  margin-inline: 20px;
+  font-family:'Caveat'; */
+}
+.layer1{
+ 
+height: auto;
+display: block;
+
+ 
+  
+}
+.layer1 div{
+  width: 100%;
+  height: 90%;
+  margin-block:30px ;
+  /* background-color: #272725;
+  border-radius:15px ;
+  padding:5px; */
+
+}
+.player1{
+ 
+  height: auto;
+  display: block;
+  
+   
+    
+  }
+  .player1 .projectdiv{
+    width: 100%;
+    height: 90%;
+    background-color: #272725;
+    border-radius:15px ;
+    padding:20px;
+    margin-block: 20px;
+  }
+
+
  }
