--- a/src/App.css
+++ b/src/App.css
@@ -255,6 +255,25 @@ padding: 50px;
  .player1 a:hover{
   scale: 1.1;
  }
+
+.letsconnect{
+  width: 100%;
+  height:30px;
+  text-align: center;
+  margin-block-end: 10px;
+ 
+}
+
+.letsconnect span{
+ display: block;
+  font-size: 30px;
+  font-weight: bold;
+ color: white;
+  margin-top: 20px;
+  
+  
+}
+
  @media all and (max-width:440px)
  {
   .logo{
