--- a/src/App.css
+++ b/src/App.css
@@ -274,6 +274,88 @@ padding: 50px;
   
 }
 
+
+/* Contact Page */
+/* Contact Page Styles */
+.contact-container {
+  max-width: 500px;
+  margin: 50px auto;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  /* background-color: #fff; */
+  text-align: center;
+}
+
+.contact-heading {
+  font-size: 24px;
+  color:rgb(255, 196, 0) ;
+  margin-bottom: 10px;
+  font-family:"Dancing Script" ;
+}
+
+.contact-text {
+  font-size: 19px;
+  color:white;
+  margin-bottom: 20px;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.contact-form ,input::placeholder{
+  font-family:"QuickSand";
+  text-align: center;
+  color: white;
+}
+textarea::placeholder {
+  font-family: "QuickSand", sans-serif;
+  text-align: center;
+  color: white;
+}
+
+.contact-label {
+  font-size: 14px;
+  font-weight: bold;
+  text-align: left;
+}
+
+.contact-input,
+.contact-textarea {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 100%;
+  color: white;
+  font-family: 'QuickSand';
+}
+
+.contact-textarea {
+  height: 100px;
+  resize: none;
+ 
+}
+
+.contact-button {
+  padding: 10px;
+  font-size: 16px;
+ background-color:rgb(255, 196, 0) ;
+  color: black;
+  border: black;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.contact-button:hover {
+  font-weight:bold ;
+  font-family: 'QuickSand';
+}
+
+
  @media all and (max-width:440px)
  {
   .logo{
